src/assets/branches/r1.1/api/fe/build.md
## build<span class="tag">function</span><a class="sourcelink" href=https://github.com/fastestimator/fastestimator/blob/r1.1/fastestimator/network.py/#L692-L781>View source on Github</a>
```python
build(
	model_fn: Callable[[], Union[~Model, List[~Model]]],
	optimizer_fn: Union[str, fastestimator.schedule.schedule.Scheduler, Callable, List[str], List[Callable], List[fastestimator.schedule.schedule.Scheduler], NoneType],
	weights_path: Union[str, NoneType, List[Union[str, NoneType]]]=None,
	model_name: Union[str, List[str], NoneType]=None,
	mixed_precision: bool=False
)
-> Union[~Model, List[~Model]]
```
Build model instances and associate them with optimizers.

This method can be used with TensorFlow models / optimizers:
```python
model_def = fe.architecture.tensorflow.LeNet
model = fe.build(model_fn = model_def, optimizer_fn="adam")
model = fe.build(model_fn = model_def, optimizer_fn=lambda: tf.optimizers.Adam(lr=0.1))
model = fe.build(model_fn = model_def, optimizer_fn="adam", weights_path="~/weights.h5")
```

This method can be used with PyTorch models / optimizers:
```python
model_def = fe.architecture.pytorch.LeNet
model = fe.build(model_fn = model_def, optimizer_fn="adam")
model = fe.build(model_fn = model_def, optimizer_fn=lambda x: torch.optim.Adam(params=x, lr=0.1))
model = fe.build(model_fn = model_def, optimizer_fn="adam", weights_path="~/weights.pt)
```


<h3>Args:</h3>


* **model_fn**: A function that define model(s).

* **optimizer_fn**: Optimizer string/definition or a list of optimizer instances/strings. The number of optimizers provided here should match the number of models generated by the `model_fn`.

* **model_name**: Name(s) of the model(s) that will be used for logging purpose. If None, a name will be automatically generated and assigned.

* **weights_path**: Path(s) from which to load model weights. If not None, then the number of weight paths provided should match the number of models generated by the `model_fn`.

* **mixed_precision**: Whether to enable mix precision network operations. 

<h3>Returns:</h3>

<ul class="return-block"><li>    models: The model(s) built by FastEstimator.</li></ul>

